# a2a-demo

./: .gitignore  Makefile  README.md  REPO_ANALYSIS_AND_IMPROVEMENTS.md  config.py  main.py  models.py  pyproject.toml  requirement.txt
remote/agent_one_dir/: agent.json  agent.py
remote2/agent_two_dir/: agent.json  agent.py
scripts/: start_agents.py
supervisor_dir/: agent.py
