[project]
name = "a2a-demo-final"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-adk[a2a]==1.35.2",
    "groq>=1.5.0",
    "litellm>=1.90.1",
    "python-dotenv>=1.2.2",
    "starlette>=0.52.1",
    "uvicorn>=0.49.0",
]
